2004-10-21  Eric B. Weddington <ericW@evcohs.com>

    * include/avr/iom64.h: Fix bit identifer ADFR to ADATE.
    [Bug #10733]

2004-10-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: Add section about gas
	pseudo-ops and AVR-specific operators
	* doc/api/faq.dox: add xref to that section here.

2004-10-15  Eric B. Weddington <ericw@evcohs.com>

	* include/avr/iom165.h: New file. [Patch #3375]
	* include/avr/iom325.h: New file. [Patch #3381]
	* include/avr/iom3250.h: New file. [Patch #3379]
	* include/avr/iom645.h: New file. [Patch #3380]
	* include/avr/iom6450.h: New file. [Patch #3377]
	Add IO header files for new devices.

2004-09-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: fix parsing of multiple
	float values; fix for bug #10068.

2004-09-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/crc16.h: Update copyright year.
	(_crc16_update): Add __volatile__ to inline asm. [Bug #10450]
	(_crc_xmodem_update): Ditto.
	(_crc_ccitt_update): Ditto.

2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: enable and document atof().
	Delete realloc() from the #if 0 part, it's already
	declared and documented anyway.

2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: Fix a logical flaw that caused
	characters > 'Z' && < 'a' to be misdetected as valid
	hex digits.  Fix for bug #10420.

2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* include/stdint.h (__HAS_INT32_T__): Define if gcc can supply us with
	a 32 bit integer.
	(__HAS_INT64_T__): Define if gcc can supply us with a 64 bit integer.
	* include/avr/pgmspace.h (prog_int32_t): Use __HAS_INT32_T__ when
	typedef'ing.
	(prog_uint32_t): Ditto.
	(prog_int64_t): Use __HAS_INT64_T__ when typedef'ing.
	(prog_uint64_t): Ditto.

2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in: Don't generate version.h.